# gh-stats-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
gh_stats/: __init__.py  cli.py  display.py  github.py
