[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-stats-cli"
version = "0.1.0"
description = "A CLI tool that fetches and displays GitHub user/repo stats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Amar Reddy"},
]
dependencies = [
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "httpx>=0.27,<1",
]

[project.scripts]
ghstats = "gh_stats.cli:main"
